--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc3"
+    "buefy": "^0.5.0",
+    "font-awesome": "^4.7.0",
+    "jump.js": "^1.0.2",
+    "marked": "^0.3.6",
+    "nuxt": "^1.0.0-rc3",
+    "vue-clipboard2": "0.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -24,6 +29,10 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-vue": "^2.1.0"
+    "eslint-plugin-vue": "^2.1.0",
+    "node-sass": "^4.5.3",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.6"
   }
 }
